<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_margin="0dp"
        android:padding="15dp">

        <TextView
            android:id='@+id/iv'
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/RegisterActivity_xml__NewUserRegistration"
            android:textSize="30sp"
            android:textStyle="bold" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/name_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/number"
        android:layout_centerVertical="true"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Account"
            android:textColor="#000"
            android:textSize="16sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/reg_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/RegisterActivity_xml__Hint1"
            android:textSize="16sp"
            android:gravity="center"
            android:inputType="text"
            android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_add"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Password"
            android:textColor="#000"
            android:textSize="16sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_password"
            android:hint="@string/RegisterActivity_xml__Hint2"
            android:textSize="16sp"
            android:gravity="center"
            android:inputType="textPassword"
            android:padding="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_add"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#ffffff"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_password1"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/ConfirmPassword"
            android:textColor="#000"
            android:textSize="16sp" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/reg_password1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/tv_password"
            android:hint="@string/RegisterActivity_xml__Hint3"
            android:textSize="16sp"
            android:gravity="center"
            android:inputType="textPassword"
            android:padding="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/Register"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:text="@string/Back"
        android:textSize="24sp" />

</LinearLayout>