<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <EditText
        android:id="@+id/et_studentId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/student_dialog_xml__Hint1"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="20dp" />

    <EditText
        android:id="@+id/et_studentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/student_dialog_xml__Hint2"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="20dp" />
    <EditText
        android:id="@+id/et_studentClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/student_dialog_xml__Hint3"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_margin="20dp" />

</LinearLayout>